style.css
/* ========== UNIVERSIAL STYLES ========== */
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}
html {
    background-color: #fff;
}
body {
    font-size: 16px;
    margin-top: 150px;
    font-family: 'Avenir', sans-serif;
}
/* ========== MAIN TYPOGRAPHY ========== */
h1 {
    font-family: 'Avenir', sans-serif;
    font-size: 50px;
    text-transform: uppercase;
    color: #9dca87;
    padding-bottom: 20px;
}
@media only screen and (max-width: 1166px) {
    h1 {
        font-size: 32px;
        text-align: center;
    }
}
h2 {
    font-family: 'Avenir', sans-serif;
    font-size: 32px;
    text-transform: uppercase;
}
section h2 {
    text-align: center;
    padding: 50px;
}
h3 {
    font-family: 'Avenir', sans-serif;
    font-size: 28px;
    text-transform: uppercase;
}
a {
    font-family: 'Avenir', sans-serif;
    font-weight: bold;
    text-decoration: none;
}
/* ======== LINKS & BUTTONS =========== */
a.button {
    display: block;
    min-width: 160px;
    background-color: #9dca87;
    color: #fff;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    border: 2px solid #9dca87;
    border-radius: 30px;
    padding: 10px 20px;
}
a.button:hover {
    background-color: #fff;
    color: #000;
    border: 2px solid #000;
}
@media only screen and (min-width: 1166px) {
    a.button {
        width: 300px; 
    }
}
a.black:hover {
    background-color: #000;
    color: #fff;
    border: 2px solid #fff;
}
a.full-width {
    width: 100%;
    padding: 15px;
    font-size: 20px;
    margin-top: 100px;
}
/* ========= REUSABLE CLASS SELECTORS ======== */
.wrapper {
    display: flex;
    flex-wrap: wrap;
}
section {
    padding-top: 40px;
    padding-bottom: 80px;
}
.social {
    font-size: 50px;
    color: #000;
}
.social:hover {
    color: #9dca87;
}
.light {
    color:#fff;
}
/* =========== HEADER =========== */
header {
    background: #000000;
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 150px;
}
@media only screen and (max-width: 1166px) {
    header {
        height: 100px;
    }
}
/* =========== NAV =========== */
nav {
    display: inline-flex;
}
.nav-burger, .nav-close {
    color: #fff;
}
img.logo {
    position: relative;
    top: 0;
    left: 0;
    height: 150px;
    padding: 30px;
}
@media only screen and (max-width: 1166px) {
    img.logo {
        height: 100px;
        padding: 10px;
    }
}
ul.nav-list  {
    position: absolute;
    top: 0;
    right: 0;
}
nav li {
    display: inline-block;
    margin: 60px;
}
nav a {
    color: #fff;
    font-size: 18px;
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'Avenir', sans-serif;
}
nav a:hover {
    color: #9dca87;
}
.nav-button {
    border: 1px solid #fff;
    padding: 10px 20px;
    border-radius: 30px;
    text-decoration: none;
    color: #fff;
}
.nav-button:hover {
    background-color: #9dca87;
    border: 1px solid #9dca87;
    color: #fff;
}
@media only screen and (max-width: 1166px) {
    .nav-button {
        font-size: 14px;
    }
}
@media only screen and (max-width: 1166px) {
    nav li {
        margin: 35px 10px;
    }
}
/* ========= MOBILE NAV ========== 
.icon {
    display: none;
    font-size: 30px;
    padding: 45px;
}
@media screen and (max-width: 900px) {
    .nav ul {display: none;}
    .nav .icon {
      position: absolute;
      top: 0;
      right: 0;
      display: block;
    }
}
@media screen and (max-width: 900px) {
    .nav.responsive {
        position: relative;
        background-color: gray;
    }
    .nav.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .nav.responsive a {
      float: none;
      display: block;
      text-align: left;
    }
}
/* ========= HOMEPAGE ========= */
/* --------- About Me - Section --------- */
.about-img {
    width: 300px;
    height: 300px;
    object-fit: cover;
    float: left;
    border-radius: 50%;
}
section.about-me {
    width:90%;
    margin: 0 auto;
    min-height: 300px;
    justify-content: center;
    align-items: center;
}
.about-txt {
    max-width: 650px;
    margin: 50px;
}
@media only screen and (max-width: 1166px) {
    .about-txt {
        margin: 30px 0px;
    }
}
/* --------- Recent Work - Section --------- */
.dark-bg {
    background-color: #000;
    color:#fff;
}
.home-recent-work {
    color: #fff;
    padding-top: 50px;
    padding-bottom: 100px;
    min-height: 400px;
    width: 80%;
    margin: 0 auto;
}
.proj-img {
    width: 600px;
    height: 300px;
    background-color: #fff;
}
.grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-auto-rows: repeat(2, 1fr);
    grid-auto-columns: repeat(2, 1fr);
    grid-column-gap: 40px;
    grid-row-gap: 150px;
}
@media only screen and (max-width: 1435px) {
    .grid {
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(2, 1fr);
        grid-auto-rows: repeat(2, 1fr);
        grid-auto-columns: repeat(1, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
    }
    .proj-img {
        width: 100%;
        height: auto;
        margin-top: 40px;
    }
}
/* --------- Contact - Section --------- */
.contact {
    width: 80%;
    margin: 0 auto;
    text-align: center;
}
.inline-icon {
    color: #000;
    font-family: 'Avenir', sans-serif;
    font-size: 18px;
}
.inline-icon:hover {
    color: #9dca87;
}
/* ========== RECENT WORK PAGE =========== 
/* --------- Hero - Section --------- */
.hero {
    background-image: url("./images/background.jpg");
    background-size: cover;
    background-color: rgba(0,0,0,0.5);
    background-blend-mode: darken;
    background-position: top;
    min-height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.hero h1 { 
    color: #fff;
}
/* ------- Recent Work Gallery - Section --------- */
.recent-work-gallery {
    display: grid;
    width: 80%;
    margin: 0 auto;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
}
.category {
    background-color: gray;
    min-height: 300px;
}

/* ========== FOOTER =========== */
footer {
    padding: 10px 20px;
    background-color: #9dca87;
    color: white;
    font-family: sans-serif;
    min-height: 100px;
    align-items: center;
    display: flex;
}

